# UATReinforce

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  agent.txt  debug.txt  path.txt  trade.txt
include/: airspace2d.hpp  airspace3d.hpp  astar.hpp  naive.hpp  network.hpp  smart.hpp
src/: airspace2d.cpp  airspace3d.cpp  astar.cpp  main.cpp  naive.cpp  network.cpp  smart.cpp
